.kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sisbgws-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/server-alias: sisbgws.policiacivil.go.gov.br
spec:
  tls:
    - hosts:
        - sisbgws-homo.policiacivil.go.gov.br
        - sisbgws.policiacivil.go.gov.br
      secretName: certificado-pc
  rules:
    - host: sisbgws-homo.policiacivil.go.gov.br
      http:
        paths:
          - path: /
            backend:
              serviceName: sisbgws-service
              servicePort: http
